# napari-train-cellpose

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_train_cellpose/: __init__.py  annotate_widget.py  napari.yaml
src/napari_train_cellpose/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_train_cellpose/_tests/parameters/: test_parameters.py
src/napari_train_cellpose/parameters/: parameters.py  yaml_utils.py
