[metadata]
name = napari-train-cellpose

description = A plugin for Image Annotation and Training a Custom Cellpose model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abailoni/napari-train-cellpose
author = Alberto Bailoni
author_email = alberto.bailoni@embl.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/abailoni/napari-train-cellpose/issues
    Documentation = https://github.com/abailoni/napari-train-cellpose#README.md
    Source Code = https://github.com/abailoni/napari-train-cellpose
    User Support = https://github.com/abailoni/napari-train-cellpose/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-train-cellpose = napari_train_cellpose:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
